--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1395,7 +1395,7 @@ p {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: url(../images/footer-bg.svg);
+  background-image: url('https://assets.datahayinfotech.com/assets/uploadImages/background.jpeg');
   background-position: top center;
   z-index: -1;
   background-size: cover; }
